(darkside) fixing composer fields spacing (#3020)
* fixing composer fields spacing

* updating attachement selector names

--- a/internal_packages/ui-darkside/styles/darkside-message-list.less
+++ b/internal_packages/ui-darkside/styles/darkside-message-list.less
@@ -33,6 +33,10 @@
   padding: 20px !important;
 }
 
+#message-list .message-item-wrap.collapsed .message-item-area .collapsed-attachment {
+  padding: 10px;
+}
+
 // Adjusting position of thread participants toggle
 #message-list .header-toggle-control {
   top: 6px !important;
